# roll

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: package.yml  release.yml  tests.yml
docs/: _index.md  architecture.md  development.md  editing.md  getting-started.md  glossary.md  homebrew.md  index.md  model.md  mvp.md  reference.md
packaging/homebrew/: roll.rb
src/roll/: __main__.py  archive.py  cli.py  config.py  diagnostics.py  dictionaries.py  filesystem.py  formatting.py  index.py  messages.py  normalization.py  search.py  version.py  vocabulary.py  workspace.py
src/roll/app/: __init__.py  batch.py  diagnostics.py  doctor_output.py  index.py  normalization.py  roll_store.py  root_commands.py  search.py  stats.py  stock.py  stock_store.py  vocabulary.py  workspace.py
src/roll/app/archive/: batch.py  commands.py  normalization.py  normalization_output.py  normalize_cli.py  normalize_commands.py  photo_dates.py  search.py  search_output.py  (+4 more)
src/roll/cli/: guards.py  prompts.py
src/roll/dictionary_files/: cameras.txt  features.txt  films.txt  keywords.txt
src/roll/helpers/: __init__.py  autocomplete.py  formatting.py  guards.py  output.py  parsing.py  prompts.py
src/roll/messages/: __init__.py  cli.py  doctor.py  i18n.py  normalize.py
tests/: __init__.py  test_cli_smoke.py  test_config.py  test_normalization.py  test_root_commands.py  test_storage.py  test_version.py
(+11 files in other folders)
