[project]
name = "roll"
version = "0.1.0"
description = "Personal film roll index"
requires-python = ">=3.12"
dependencies = [
    "typer==0.16.0",
    "prompt-toolkit==3.0.51",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pre-commit (>=4.6.0,<5.0.0)",
]

[project.scripts]
rl = "roll.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
