[project]
name = "roll"
dynamic = ["version"]
description = "Personal film roll index"
requires-python = ">=3.12"
dependencies = [
    "typer==0.16.0",
    "prompt-toolkit==3.0.51",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pre-commit (>=4.6.0,<5.0.0)",
]

[project.scripts]
rl = "roll.cli:app"

[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/roll/_version.py"
